antlr/coolParser.py
# Generated from /Users/danielbakas/Documents/Escuela/Tec/Semestre 8/Diseño de Compiladores/Proyecto Final/antlr/cool.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class coolParser ( Parser ):

    grammarFileName = "cool.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'inherits'", "'{'", "'}'", "'('", 
                     "','", "')'", "':'", "'<-'", "'.'", "'@'", "'\u02DC'", 
                     "'*'", "'/'", "'+'", "'-'", "'<'", "'<='", "'='", "'not'", 
                     "'=>'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "KLASS", "FI", "IF", "IN", 
                      "INHERITS", "ISVOID", "LET", "LOOP", "POOL", "THEN", 
                      "ELSE", "WHILE", "CASE", "ESAC", "NEW", "OF", "NOT", 
                      "TRUE", "FALSE", "TYPE", "ID", "INTEGER", "STRING", 
                      "COMMENT", "LINE_COMENT", "WS" ]

    RULE_program = 0
    RULE_klass = 1
    RULE_feature = 2
    RULE_formal = 3
    RULE_expr = 4
    RULE_case_stat = 5
    RULE_let_decl = 6
    RULE_primary = 7

    ruleNames =  [ "program", "klass", "feature", "formal", "expr", "case_stat", 
                   "let_decl", "primary" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    KLASS=22
    FI=23
    IF=24
    IN=25
    INHERITS=26
    ISVOID=27
    LET=28
    LOOP=29
    POOL=30
    THEN=31
    ELSE=32
    WHILE=33
    CASE=34
    ESAC=35
    NEW=36
    OF=37
    NOT=38
    TRUE=39
    FALSE=40
    TYPE=41
    ID=42
    INTEGER=43
    STRING=44
    COMMENT=45
    LINE_COMENT=46
    WS=47

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def klass(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(coolParser.KlassContext)
            else:
                return self.getTypedRuleContext(coolParser.KlassContext,i)


        def getRuleIndex(self):
            return coolParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = coolParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 21
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==coolParser.KLASS:
                self.state = 16
                self.klass()
                self.state = 17
                self.match(coolParser.T__0)
                self.state = 23
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class KlassContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KLASS(self):
            return self.getToken(coolParser.KLASS, 0)

        def TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(coolParser.TYPE)
            else:
                return self.getToken(coolParser.TYPE, i)

        def feature(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(coolParser.FeatureContext)
            else:
                return self.getTypedRuleContext(coolParser.FeatureContext,i)


        def getRuleIndex(self):
            return coolParser.RULE_klass

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKlass" ):
                listener.enterKlass(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKlass" ):
                listener.exitKlass(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitKlass" ):
                return visitor.visitKlass(self)
            else:
                return visitor.visitChildren(self)




    def klass(self):

        localctx = coolParser.KlassContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_klass)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 24
            self.match(coolParser.KLASS)
            self.state = 25
            self.match(coolParser.TYPE)
            self.state = 28
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==coolParser.T__1:
                self.state = 26
                self.match(coolParser.T__1)
                self.state = 27
                self.match(coolParser.TYPE)


            self.state = 30
            self.match(coolParser.T__2)
            self.state = 36
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==coolParser.ID:
                self.state = 31
                self.feature()
                self.state = 32
                self.match(coolParser.T__0)
                self.state = 38
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 39
            self.match(coolParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FeatureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._formal = None # FormalContext
            self.params = list() # of FormalContexts

        def ID(self):
            return self.getToken(coolParser.ID, 0)

        def TYPE(self):
            return self.getToken(coolParser.TYPE, 0)

        def expr(self):
            return self.getTypedRuleContext(coolParser.ExprContext,0)


        def formal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(coolParser.FormalContext)
            else:
                return self.getTypedRuleContext(coolParser.FormalContext,i)


        def getRuleIndex(self):
            return coolParser.RULE_feature

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFeature" ):
                listener.enterFeature(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFeature" ):
                listener.exitFeature(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFeature" ):
                return visitor.visitFeature(self)
            else:
                return visitor.visitChildren(self)




    def feature(self):

        localctx = coolParser.FeatureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_feature)
        self._la = 0 # Token type
        try:
            self.state = 67
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 41
                self.match(coolParser.ID)
                self.state = 42
                self.match(coolParser.T__4)
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==coolParser.ID:
                    self.state = 43
                    localctx._formal = self.formal()
                    localctx.params.append(localctx._formal)
                    self.state = 48
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==coolParser.T__5:
                        self.state = 44
                        self.match(coolParser.T__5)
                        self.state = 45
                        localctx._formal = self.formal()
                        localctx.params.append(localctx._formal)
                        self.state = 50
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 53
                self.match(coolParser.T__6)
                self.state = 54
                self.match(coolParser.T__7)
                self.state = 55
                self.match(coolParser.TYPE)
                self.state = 56
                self.match(coolParser.T__2)
                self.state = 57
                self.expr(0)
                self.state = 58
                self.match(coolParser.T__3)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 60
                self.match(coolParser.ID)
                self.state = 61
                self.match(coolParser.T__7)
                self.state = 62
                self.match(coolParser.TYPE)
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==coolParser.T__8:
                    self.state = 63
                    self.match(coolParser.T__8)
                    self.state = 64
                    self.expr(0)


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(coolParser.ID, 0)

        def TYPE(self):
            return self.getToken(coolParser.TYPE, 0)

        def getRuleIndex(self):
            return coolParser.RULE_formal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormal" ):
                listener.enterFormal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormal" ):
                listener.exitFormal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormal" ):
                return visitor.visitFormal(self)
            else:
                return visitor.visitChildren(self)




    def formal(self):

        localctx = coolParser.FormalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_formal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(coolParser.ID)
            self.state = 70
            self.match(coolParser.T__7)
            self.state = 71
            self.match(coolParser.TYPE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._expr = None # ExprContext
            self.params = list() # of ExprContexts

        def primary(self):
            return self.getTypedRuleContext(coolParser.PrimaryContext,0)


        def ID(self):
            return self.getToken(coolParser.ID, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(coolParser.ExprContext)
            else:
                return self.getTypedRuleContext(coolParser.ExprContext,i)


        def IF(self):
            return self.getToken(coolParser.IF, 0)

        def THEN(self):
            return self.getToken(coolParser.THEN, 0)

        def ELSE(self):
            return self.getToken(coolParser.ELSE, 0)

        def FI(self):
            return self.getToken(coolParser.FI, 0)

        def WHILE(self):
            return self.getToken(coolParser.WHILE, 0)

        def LOOP(self):
            return self.getToken(coolParser.LOOP, 0)

        def POOL(self):
            return self.getToken(coolParser.POOL, 0)

        def LET(self):
            return self.getToken(coolParser.LET, 0)

        def let_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(coolParser.Let_declContext)
            else:
                return self.getTypedRuleContext(coolParser.Let_declContext,i)


        def IN(self):
            return self.getToken(coolParser.IN, 0)

        def CASE(self):
            return self.getToken(coolParser.CASE, 0)

        def OF(self):
            return self.getToken(coolParser.OF, 0)

        def ESAC(self):
            return self.getToken(coolParser.ESAC, 0)

        def case_stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(coolParser.Case_statContext)
            else:
                return self.getTypedRuleContext(coolParser.Case_statContext,i)


        def NEW(self):
            return self.getToken(coolParser.NEW, 0)

        def TYPE(self):
            return self.getToken(coolParser.TYPE, 0)

        def ISVOID(self):
            return self.getToken(coolParser.ISVOID, 0)

        def getRuleIndex(self):
            return coolParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = coolParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 74
                self.primary()
                pass

            elif la_ == 2:
                self.state = 75
                self.match(coolParser.ID)
                self.state = 76
                self.match(coolParser.T__4)
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << coolParser.T__2) | (1 << coolParser.T__4) | (1 << coolParser.T__11) | (1 << coolParser.T__19) | (1 << coolParser.IF) | (1 << coolParser.ISVOID) | (1 << coolParser.LET) | (1 << coolParser.WHILE) | (1 << coolParser.CASE) | (1 << coolParser.NEW) | (1 << coolParser.TRUE) | (1 << coolParser.FALSE) | (1 << coolParser.ID) | (1 << coolParser.INTEGER) | (1 << coolParser.STRING))) != 0):
                    self.state = 77
                    localctx._expr = self.expr(0)
                    localctx.params.append(localctx._expr)
                    self.state = 82
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==coolParser.T__5:
                        self.state = 78
                        self.match(coolParser.T__5)
                        self.state = 79
                        localctx._expr = self.expr(0)
                        localctx.params.append(localctx._expr)
                        self.state = 84
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 87
                self.match(coolParser.T__6)
                pass

            elif la_ == 3:
                self.state = 88
                self.match(coolParser.IF)
                self.state = 89
                self.expr(0)
                self.state = 90
                self.match(coolParser.THEN)
                self.state = 91
                self.expr(0)
                self.state = 92
                self.match(coolParser.ELSE)
                self.state = 93
                self.expr(0)
                self.state = 94
                self.match(coolParser.FI)
                pass

            elif la_ == 4:
                self.state = 96
                self.match(coolParser.WHILE)
                self.state = 97
                self.expr(0)
                self.state = 98
                self.match(coolParser.LOOP)
                self.state = 99
                self.expr(0)
                self.state = 100
                self.match(coolParser.POOL)
                pass

            elif la_ == 5:
                self.state = 102
                self.match(coolParser.LET)
                self.state = 103
                self.let_decl()
                self.state = 108
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==coolParser.T__5:
                    self.state = 104
                    self.match(coolParser.T__5)
                    self.state = 105
                    self.let_decl()
                    self.state = 110
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 111
                self.match(coolParser.IN)
                self.state = 112
                self.expr(16)
                pass

            elif la_ == 6:
                self.state = 114
                self.match(coolParser.CASE)
                self.state = 115
                self.expr(0)
                self.state = 116
                self.match(coolParser.OF)
                self.state = 118 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 117
                    self.case_stat()
                    self.state = 120 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==coolParser.ID):
                        break

                self.state = 122
                self.match(coolParser.ESAC)
                pass

            elif la_ == 7:
                self.state = 124
                self.match(coolParser.NEW)
                self.state = 125
                self.match(coolParser.TYPE)
                pass

            elif la_ == 8:
                self.state = 126
                self.match(coolParser.T__2)
                self.state = 130 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 127
                    self.expr(0)
                    self.state = 128
                    self.match(coolParser.T__0)
                    self.state = 132 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << coolParser.T__2) | (1 << coolParser.T__4) | (1 << coolParser.T__11) | (1 << coolParser.T__19) | (1 << coolParser.IF) | (1 << coolParser.ISVOID) | (1 << coolParser.LET) | (1 << coolParser.WHILE) | (1 << coolParser.CASE) | (1 << coolParser.NEW) | (1 << coolParser.TRUE) | (1 << coolParser.FALSE) | (1 << coolParser.ID) | (1 << coolParser.INTEGER) | (1 << coolParser.STRING))) != 0)):
                        break

                self.state = 134
                self.match(coolParser.T__3)
                pass

            elif la_ == 9:
                self.state = 136
                self.match(coolParser.T__11)
                self.state = 137
                self.expr(11)
                pass

            elif la_ == 10:
                self.state = 138
                self.match(coolParser.ISVOID)
                self.state = 139
                self.expr(10)
                pass

            elif la_ == 11:
                self.state = 140
                self.match(coolParser.T__19)
                self.state = 141
                self.expr(2)
                pass

            elif la_ == 12:
                self.state = 142
                self.match(coolParser.ID)
                self.state = 143
                self.match(coolParser.T__8)
                self.state = 144
                self.expr(1)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 204
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,19,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 202
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,18,self._ctx)
                    if la_ == 1:
                        localctx = coolParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 147
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 148
                        self.match(coolParser.T__12)
                        self.state = 149
                        self.expr(10)
                        pass

                    elif la_ == 2:
                        localctx = coolParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 150
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 151
                        self.match(coolParser.T__13)
                        self.state = 152
                        self.expr(9)
                        pass

                    elif la_ == 3:
                        localctx = coolParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 153
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 154
                        self.match(coolParser.T__14)
                        self.state = 155
                        self.expr(8)
                        pass

                    elif la_ == 4:
                        localctx = coolParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 156
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 157
                        self.match(coolParser.T__15)
                        self.state = 158
                        self.expr(7)
                        pass

                    elif la_ == 5:
                        localctx = coolParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 159
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 160
                        self.match(coolParser.T__16)
                        self.state = 161
                        self.expr(6)
                        pass

                    elif la_ == 6:
                        localctx = coolParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 162
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 163
                        self.match(coolParser.T__17)
                        self.state = 164
                        self.expr(5)
                        pass

                    elif la_ == 7:
                        localctx = coolParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 165
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 166
                        self.match(coolParser.T__18)
                        self.state = 167
                        self.expr(4)
                        pass

                    elif la_ == 8:
                        localctx = coolParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 168
                        if not self.precpred(self._ctx, 17):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 17)")
                        self.state = 169
                        self.match(coolParser.T__9)
                        self.state = 170
                        self.match(coolParser.ID)
                        self.state = 171
                        self.match(coolParser.T__4)
                        self.state = 180
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << coolParser.T__2) | (1 << coolParser.T__4) | (1 << coolParser.T__11) | (1 << coolParser.T__19) | (1 << coolParser.IF) | (1 << coolParser.ISVOID) | (1 << coolParser.LET) | (1 << coolParser.WHILE) | (1 << coolParser.CASE) | (1 << coolParser.NEW) | (1 << coolParser.TRUE) | (1 << coolParser.FALSE) | (1 << coolParser.ID) | (1 << coolParser.INTEGER) | (1 << coolParser.STRING))) != 0):
                            self.state = 172
                            localctx._expr = self.expr(0)
                            localctx.params.append(localctx._expr)
                            self.state = 177
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)
                            while _la==coolParser.T__5:
                                self.state = 173
                                self.match(coolParser.T__5)
                                self.state = 174
                                localctx._expr = self.expr(0)
                                localctx.params.append(localctx._expr)
                                self.state = 179
                                self._errHandler.sync(self)
                                _la = self._input.LA(1)



                        self.state = 182
                        self.match(coolParser.T__6)
                        pass

                    elif la_ == 9:
                        localctx = coolParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 183
                        if not self.precpred(self._ctx, 12):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 12)")
                        self.state = 186
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==coolParser.T__10:
                            self.state = 184
                            self.match(coolParser.T__10)
                            self.state = 185
                            self.match(coolParser.TYPE)


                        self.state = 188
                        self.match(coolParser.T__9)
                        self.state = 189
                        self.match(coolParser.ID)
                        self.state = 190
                        self.match(coolParser.T__4)
                        self.state = 199
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << coolParser.T__2) | (1 << coolParser.T__4) | (1 << coolParser.T__11) | (1 << coolParser.T__19) | (1 << coolParser.IF) | (1 << coolParser.ISVOID) | (1 << coolParser.LET) | (1 << coolParser.WHILE) | (1 << coolParser.CASE) | (1 << coolParser.NEW) | (1 << coolParser.TRUE) | (1 << coolParser.FALSE) | (1 << coolParser.ID) | (1 << coolParser.INTEGER) | (1 << coolParser.STRING))) != 0):
                            self.state = 191
                            localctx._expr = self.expr(0)
                            localctx.params.append(localctx._expr)
                            self.state = 196
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)
                            while _la==coolParser.T__5:
                                self.state = 192
                                self.match(coolParser.T__5)
                                self.state = 193
                                localctx._expr = self.expr(0)
                                localctx.params.append(localctx._expr)
                                self.state = 198
                                self._errHandler.sync(self)
                                _la = self._input.LA(1)



                        self.state = 201
                        self.match(coolParser.T__6)
                        pass

             
                self.state = 206
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,19,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Case_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(coolParser.ID, 0)

        def TYPE(self):
            return self.getToken(coolParser.TYPE, 0)

        def expr(self):
            return self.getTypedRuleContext(coolParser.ExprContext,0)


        def getRuleIndex(self):
            return coolParser.RULE_case_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCase_stat" ):
                listener.enterCase_stat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCase_stat" ):
                listener.exitCase_stat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCase_stat" ):
                return visitor.visitCase_stat(self)
            else:
                return visitor.visitChildren(self)




    def case_stat(self):

        localctx = coolParser.Case_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_case_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 207
            self.match(coolParser.ID)
            self.state = 208
            self.match(coolParser.T__7)
            self.state = 209
            self.match(coolParser.TYPE)
            self.state = 210
            self.match(coolParser.T__20)
            self.state = 211
            self.expr(0)
            self.state = 212
            self.match(coolParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Let_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(coolParser.ID, 0)

        def TYPE(self):
            return self.getToken(coolParser.TYPE, 0)

        def expr(self):
            return self.getTypedRuleContext(coolParser.ExprContext,0)


        def getRuleIndex(self):
            return coolParser.RULE_let_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLet_decl" ):
                listener.enterLet_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLet_decl" ):
                listener.exitLet_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLet_decl" ):
                return visitor.visitLet_decl(self)
            else:
                return visitor.visitChildren(self)




    def let_decl(self):

        localctx = coolParser.Let_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_let_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 214
            self.match(coolParser.ID)
            self.state = 215
            self.match(coolParser.T__7)
            self.state = 216
            self.match(coolParser.TYPE)
            self.state = 219
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==coolParser.T__8:
                self.state = 217
                self.match(coolParser.T__8)
                self.state = 218
                self.expr(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

